Fixed: Couldn't interact with map on small screens

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -39,6 +39,10 @@
 
 }
 
+.map-holder {
+    z-index: 10000;
+}
+
 .angular-google-map {
     height: 100%;
     width: 100%;
